$Id$

Summary of Changes for Duro

Changes for Duro 0.12

- Changed interface for creating read-only operator expressions.

- Replaced GNU Autotools by SCons.

- Using tcltest for testing.

- Replaced RDB_table by RDB_object.

- Removed RDB_project, RDB_union ...

- Removed RDB_expr_any ...

Changes for Duro 0.11

- Added RDB_type_attrs().

- Removed RDB_set_errfile(), RDB_get_errfile(), RDB_set_errfn(),
  and RDB_get_errfn().

- Durotcl: Added duro::env seterrfile. dberror is no longer called.

- Bugfixes.

Changes for Duro 0.10

- Replaced RDB_RATIONAL by RDB_FLOAT and RDB_DOUBLE.

- RDB_update() and RDB_delete return the number of tuples updated or
  deleted, respectively.

- Added option --without-tcl to configure.

- RDB_cardinality() returns an RDB_int.

- Added SEMIMINUS and SEMIJOIN.

- Redesigned the API, using scalar types for returning error information
  instead of a numerical error code.

- Added IF operator.

- Dropped catalog table SYS_POSSREPS.

- Implemented RDB_multi_assign().

- Durotcl uses Tutorial D syntax to represent values of user-defined
  types. The comparison operator is passed the actual representation.

- Read-only operators can access the current transaction if called from Tcl.

- Changed expression grammar to allow empty attribute name lists and empty
  expression lists.

- Now supporting general relation-valued expressions.

- Now supporting a user-defined comparison operator for user-defined types.

- Type constraints are now specified outside of possible representations.

- Fixed problem with error dialogs in Durotcl.

- Implemented RDB_create_constraint() and RDB_drop_constraint().

- Replaced RDB_expr_attr() by RDB_exp_var().

- A call failing for a system error no longer always results in
  an implicit rollback.

- Bugfixes.

- Single quotes are now supported in addition to double quotes
  as delimiters in string literals.

Changes for Duro 0.9

- Documented utilities in utils.html.

- Switched to Berkeley DB 4.3.
