@@ -3576,7 +3576,7 @@ The base type is specified by <var>typ</var>.
 
 <h3>Return value</h3>
 
-<p>The new array type, or NULL if the creation failed du to lack of memory.
+<p>The new array type, or NULL if the creation failed due to insufficient memory.
 
 <hr>
 
